tests/enums/option.expected.javascript.txt
true
false
false
true
10

[stdin]:201
function panic(msg) { throw new Error(msg); }
                      ^

Error: Called unwrap on None
    at panic ([stdin]:201:29)
    at Option.unwrap ([stdin]:26:16)
    at [stdin]:210:20
    at runScriptInThisContext (node:internal/vm:209:10)
    at node:internal/process/execution:459:12
    at [stdin]-wrapper:6:24
    at runScriptInContext (node:internal/process/execution:457:60)
    at evalFunction (node:internal/process/execution:285:30)
    at evalTypeScript (node:internal/process/execution:297:3)
    at node:internal/main/eval_stdin:51:5

Node.js v23.6.1
